--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -1,8 +1,3 @@
-// site-page
-
-.site-page {
-
-}
 
 // header
 .masthead {
@@ -317,25 +312,4 @@
 /* Make sure select elements fit in widgets. */
 .widget select {
 	max-width: 100%;
-}
-
-// comments
-
-.post-comments {
-	margin-top: 1.5rem;
-	border-top: 1px dotted $greyblue;
-	padding-top: 1.5rem;
-}
-
-.comment-list {
-	padding-bottom: 1.85rem;
-	border-bottom: 1px dotted $greyblue;
-}
-
-.comment-content a {
-	word-wrap: break-word;
-}
-
-.bypostauthor {
-	display: block;
 }
